--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,12 +1,16 @@
 .CompactCard {
   display: flex;
-  flex: 1;
-  height: 7rem !important;
+  flex-direction: column;
+  gap: 1rem;
+ 
   border-radius: 0.7rem;
-  color: white;
+  color: black;
+  justify-content: center;
+  align-items: center;
   padding: 1rem;
   position: relative;
   cursor: pointer;
+  text-align: center;
 }
 .CompactCard:hover {
   box-shadow: none !important;
@@ -14,31 +18,35 @@
 
 /* radial bar */
 .radialBar {
-  flex: 1 1;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   gap: 1rem;
 }
 .CircularProgressbar {
-  width: 4rem !important;
+  width: 6rem !important;
   overflow: visible;
 }
 .CircularProgressbar-path {
-  stroke: white !important;
+  stroke: orange !important;
   stroke-width: 12px !important;
   filter: drop-shadow(2px 4px 6px white);
 }
 .CircularProgressbar-trail {
-  display: none;
+  stroke: black;
 }
 .CircularProgressbar-text {
-  fill: white !important;
+  fill: black !important;
 }
 
-.radialBar > span {
+.card-title {
+  align-self: center;
   font-size: 17px;
   font-weight: bold;
+}
+.card-continue-journey{
+    color: orange;
+    font-size: 12px;
+    text-decoration: none;
 }
 
 /* sideDetail*/
