--- a/client/src/components/Dashboard/RightSide/RightSide.css
+++ b/client/src/components/Dashboard/RightSide/RightSide.css
@@ -14,23 +14,43 @@
 
 
 .Updates{
-    width: 85%;
+    box-shadow: 0px 2px 4px rgba(119, 114, 114, 0.5);
     background-color: #F6F6F9;
-    border-radius: 0.7rem;
     padding: 1rem;
+    margin-top: 2rem;
+    
+}
+
+.active-programs ,.Updates{
+    width: 90%;
+    border-radius: 0.7rem;
     gap: 1rem;
     display: flex;
     flex-direction: column;
     font-size: 13px;
-    box-shadow: 0px 2px 4px rgba(119, 114, 114, 0.5);
 }
 
-.update{
+.active-programs{
+    margin: 0 auto;
+    gap: 0.3rem;
+    cursor: pointer; 
+}
+
+.update , .programs{
     display: flex;
     gap: 0.5rem;
+    width: 15rem;
 }
 
-.Updates img{
+.programs{
+    background-color:#F1F8FF;
+    padding:0.8rem;
+    border-radius: 0.7rem;
+    width: auto;
+}
+
+
+.Updates img, .programs img{
     width: 2.5rem;
     height: 2.5rem;
 }
@@ -43,7 +63,7 @@
     display:flex;
     align-items: center;
     margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin-top: 3rem;
     margin-left: 3rem;
 }
 .profile img{
@@ -63,6 +83,24 @@
 }
 
 
+.add-program{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0;
+  }
+  .add-program button{
+    background: #FFFFFF;
+  border: 1px solid #FA8128;
+  border-radius: 20px;
+  cursor: pointer;
+  height: 2rem;
+  width: 10rem;
+  color: #FA8128;
+  font-weight: 700;
+  }
+
 @media screen and (max-width: 1200px) {
     .RightSide{
         justify-content: flex-start;
@@ -72,6 +110,10 @@
 
 @media screen and (max-width: 768px)
 {
+    .Updates{
+        margin-top: 0;
+        width: 76vw;
+    }
     .RightSide{
         width: 100%;
         margin-top: 0;
@@ -83,5 +125,15 @@
     }
     .profile{
         display: none !important;
+    }
+    .add-program{
+        margin-bottom: 30vh;
+    }
+    .programs{
+        width: 75vw;
+    }
+    .active-programs{
+        justify-content: center;
+        align-items: center;
     }
 }
