--- a/client/src/components/Landing/Navbar/Navbar.css
+++ b/client/src/components/Landing/Navbar/Navbar.css
@@ -84,7 +84,7 @@ nav{
   @media screen and (max-width: 765px) {
     .navbar-menu ul {
         position: absolute;
-        right: 0;
+        right: -5%;
         top:0;
         padding-top: 10vh;
         flex-direction: column;
