--- a/client/src/pages/Landing.css
+++ b/client/src/pages/Landing.css
@@ -1,55 +1,124 @@
 .landing{
-    margin: 0 13%;
+    margin: 0 12%;
+    
 }
 .landing-section1{
-    display: flex;
+    display: grid;
+    grid-template-columns: 50% 50%;
     width: 100%;
     position: relative;
 }
-.landing-img-bg::before{
+.bgImage{
     position: absolute;
-    top:0;
-    left: 0;
-}
-.landing-img-bg{
-    display: block;
-    position: relative;
+    z-index: -2;
     width: 100%;
     height: auto;
-    background-image:url(../imgs/Frame1.png);
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: top;
-    
-   
-
+    left: 0;
 }
+
 .content{
     width: 90%;
-    justify-content: right;
+    margin-top: 2rem;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
+}
+.subContent{
+    width: 80%;
+    margin-bottom: 2rem;
 }
 .content h1{
     font-size: 3rem;
+    margin: 1rem  0;
+    padding: 0;
+}
+.content p {
+    color: #99989C;
+}
+.section1-buttons{
+    display: flex;
+    gap: 3rem;
+    align-items: center;
+}
+.howItWorks{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem
+}
+.playButtonCircle{
+  width: 2rem;
+  height: 2rem;
+  background-color:white;
+  cursor: pointer;
+  border-radius: 50%;
+  filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
+  border: 1px solid #99989C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.playButtonTriangle{  
+ margin-left: 3px;
 
+  position: relative;  
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0.4rem 0 0.4rem 0.8rem;
+  border-color: transparent transparent transparent #013765;
+}
+.startNowButton{
+    width: 12rem;
+    height: 4rem;
+    background-color: #013765;
+    border-radius: 30px;
+    color: white;
+    cursor: pointer;
+    border: 3px solid #FFFFFF;
+    font-size: 1rem;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+.startNowButton:hover, .playButtonCircle:hover{
+    transform: scale(1.1);
+    transition: 0.3s;
+}
 
 @media screen and (max-width: 1200px) {
     .landing{
-        margin: 0 10%;
+        margin: 0 5%;
+        width: 100%;
     }
-    .landing-img-bg{
-        background-image: none;
+    .bgImage{
+        display: none;
+    }
+    .landing-section1{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .content{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
   }
 
 
 @media screen and (max-width: 765px) {
     .landing{
-        margin: 0 5%;
+        margin: 0;
+        width: 100%;
     } 
-    
+    .content h1{
+        font-size: 2rem;
+    }
+    .startNowButton{
+        width: 10rem;
+        height: 4rem;
+    }
+    .section1-buttons{
+        gap: 1rem;
+    }
 }
