--- a/client/src/components/Dashboard/MainDash/MainDash.css
+++ b/client/src/components/Dashboard/MainDash/MainDash.css
@@ -2,6 +2,7 @@
     /* padding-top: 1rem; */
     display: flex;
     flex-direction: column;
+    padding: 0 16px;
 }
 .maindash-heading-wrapper{
     display: flex;
@@ -9,6 +10,20 @@
     align-items: center;
     margin-top: 2rem;
     margin-bottom: 1.5rem;
+    margin-right: 2rem;
+}
+#light .MainDash h1, #light .MainDash h2{
+    color: var(--DarkBG);
+}
+#dark .MainDash h1, #dark .MainDash h2{
+    color: #ECF5FC;
+}
+
+#light .MainDash{
+    background-color: white;
+}
+#dark .MainDash{
+    background-color: var(--DarkBG);
 }
 
 @media screen and (max-width: 1200px) {
