--- a/client/src/components/Dashboard/Programs/Programs.css
+++ b/client/src/components/Dashboard/Programs/Programs.css
@@ -9,45 +9,70 @@ margin: 0 10px;
 .slick-list {
 margin: 0 -10px;
 }
+.slick-slider button::before, .slick-slider button::after{
+    color: var(--HMPBlue)
+
+}
 
 .card {
-border: 1px solid #fff;
-background: black;
-border-radius: 8px;
-overflow: hidden;
-
-height: 15rem;
-color: #fff;
-cursor: pointer;
+    color: black;
+    border: 1px solid #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .card-top h1 {
 font-size: 0.9rem;
-margin: 20px;
+}
+.card-top p{
+    color: var(--HMPBlue);
 }
 
 .card-top > img {
 width: 100%;
 height: 10rem;
 object-fit: cover;
-background: black;
+margin-bottom: 10px;
 }
 
 .card-bottom {
-margin: 10px 20px;
+margin: 5px 0;
+}
+.card-bottom button{
+    margin-top: 15px;
+}
+.card-bottom p{
+    font-size: 12px;
+}
+.card-top p, .card-top h1, .card-bottom p{
+    margin: 0 !important;
 }
 
-.category {
-position: relative;
+.card-bottom button{
+background: white ;
+  border: 1px solid var(--HMPBlue);
+  border-radius: 20px;
+  cursor: pointer;
+  height: 2rem;
+  width: 6rem;
+  color: var(--HMPBlue);
+  font-weight: 700;
+  }
+
+
+#dark .card{
+    color: #ECF5FC;
+    border: none;
 }
-.category::before {
-content: '';
-background: rgb(255, 61, 61);
-position: absolute;
-top: calc(100% + 10px);
-left: 0;
-right: 0;
-height: 2px;
+#dark .card-bottom button{
+    background: #000010 ;
+    filter: drop-shadow(0px 2px 4px #013765);
 }
 
 
@@ -64,3 +89,5 @@ height: 2px;
         margin-bottom: 2rem;
     }
 }
+
+
