--- a/client/src/components/Dashboard/Card/Card.css
+++ b/client/src/components/Dashboard/Card/Card.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
- 
   border-radius: 0.7rem;
   color: black;
   justify-content: center;
@@ -16,6 +15,13 @@
   box-shadow: none !important;
 }
 
+#dark .CompactCard{
+  background: #000010 !important;
+border: 1px solid #013765;
+box-shadow: 1px 4px 4px 2px #011424;
+color: #4AA9FA;
+}
+
 /* radial bar */
 .radialBar {
   display: flex;
@@ -27,15 +33,22 @@
   overflow: visible;
 }
 .CircularProgressbar-path {
-  stroke: orange !important;
+  stroke: #3386CD 100%;
   stroke-width: 12px !important;
-  filter: drop-shadow(2px 4px 6px white);
 }
 .CircularProgressbar-trail {
-  stroke: black;
+  stroke:#01376566;
 }
 .CircularProgressbar-text {
-  fill: black !important;
+  fill: var(--HMPLogoBlue) !important;
+  font-weight: 600;
+}
+
+#dark .CircularProgressbar-text{
+  fill: #FFB800 !important
+}
+#dark .CompactCard{
+box-shadow: 1px 4px 4px 2px #011424 !important;
 }
 
 .card-title {
@@ -44,7 +57,7 @@
   font-weight: bold;
 }
 .card-continue-journey{
-    color: orange;
+    color: #3386CD;
     font-size: 12px;
     text-decoration: none;
 }
