--- a/client/src/components/Dashboard/RightSide/RightSide.css
+++ b/client/src/components/Dashboard/RightSide/RightSide.css
@@ -3,19 +3,12 @@
     flex-direction: column;
     /* padding-top: 1rem; */
     width: 95%;
-    justify-content: space-evenly;
 }
-
-
-
-
-
-
 
 
 .Updates{
     box-shadow: 0px 2px 4px rgba(119, 114, 114, 0.5);
-    background-color: #F6F6F9;
+    background-color: #FAF4E6;
     padding: 1rem;
     margin-top: 2rem;
     
