--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -1,4 +1,5 @@
 .sidebar {
+  background-color: #F6F6F9;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -7,11 +8,9 @@
   height: auto;
   padding-bottom: 10rem;
 } 
-#light.sidebar{
-  background-color: #F6F6F9;
-}
-#dark.sidebar{
-  background-color: #231D19;
+
+#dark .sidebar{
+  background-color: #15151F;
 }
 /* logo */
 .bars{
@@ -57,7 +56,7 @@
 }
 .menuItem a{
   text-decoration: none;
-  color: black;
+  
 }
 .menuItem:hover {
   cursor: pointer;
@@ -68,16 +67,32 @@
   width: 100%;
   position:fixed
 }
+.menuItem svg{
+  fill:var(--HMPSideBarIcons);
+}
+.menuItem span{
+  color: var(--HMPBlue);
+}
 
+#dark .menuItem span{
+  color: #95CEFF;
+}
+#dark .menuItem svg{
+  fill: #95CEFF;
+}
 .active {
-  background: var(--activeItem);
+  background: var(--HMPLightBlue);
   margin-left: 0;
 }
+#dark .active{
+  background: rgba(40, 72, 99, 0.5);
+}
+
 .active::before {
   content: "";
   width: 8px;
   height: 100%;
-  background: var(--beforeActiveItem);
+  background: var(--HMPBlue);
   margin-right: calc(1rem - 8px);
 }
 
@@ -96,7 +111,6 @@
   .sidebar{
     position: fixed;
     z-index: 9;
-    background: #ffe0e0;
     width: 55%;
     padding-right: 1rem;
     height: 100%;
@@ -117,10 +131,15 @@
     position: fixed;
     top: 2rem;
     left:60%;
-    background:#ffe0e0;
+    background-color:var(--HMPBlue);
+    color: white;
     padding:10px;
     border-radius: 10px;
     z-index: 9;
+  }
+  #dark .bars{
+    background-color: #FFB800;
+    color: black;
   }
   .close{
     left: -60%;
