--- a/client/src/components/Dashboard/Programs/Programs.css
+++ b/client/src/components/Dashboard/Programs/Programs.css
@@ -10,8 +10,13 @@ margin: 0 10px;
 margin: 0 -10px;
 }
 .slick-slider button::before, .slick-slider button::after{
-    color: var(--HMPBlue)
+    color: var(--HMPBlue);
+    opacity: 100;
+}
 
+#dark .slick-slider button::before, .slick-slider button::after{
+    color: #ffb800;
+    opacity: 100;
 }
 
 .card {
