theme stored in localstorage

--- a/client/src/components/Dashboard/Programs/Programs.css
+++ b/client/src/components/Dashboard/Programs/Programs.css
@@ -18,14 +18,14 @@ margin: 0 -10px;
     color: #ffb800;
     opacity: 100;
 }
-.rectLine{
+.programsRectLine{
     width: 95%;
     height: 1px;
     background-color: #013765;
     margin: 0.5rem auto;
 }
 
-#dark .rectLine{
+#dark .programsRectLine{
     background-color: #4AA9FA;
 }
 
