--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,6 +38,7 @@
   width: 100%;
   background: var(--glass);
   grid-template-columns: 13rem auto 20rem;
+  overflow-x: hidden;
 }
 
 #dark .AppGlass{
