--- a/client/src/components/Dashboard/RightSide/RightSide.css
+++ b/client/src/components/Dashboard/RightSide/RightSide.css
@@ -14,7 +14,6 @@
     background-color: #FAF4E6;
     padding: 1rem;
     margin-top: 2rem;
-    
 }
 #dark .Updates{
     background-color: #001629;
@@ -24,7 +23,7 @@
 .active-programs ,.Updates{
     width: 90%;
     border-radius: 0.7rem;
-    gap: 1rem;
+    gap: 0.6rem;
     display: flex;
     flex-direction: column;
     font-size: 13px;
@@ -82,7 +81,34 @@
     font-size: 0.7rem;
 }
 
+.profileRectLine{
+    height: 1px;
+    width: 100%;
+    background-color: black;
+    margin: 0.1rem auto;
+}
+#dark .profileRectLine{
+    background-color: white;
+}
 
+.notificationTime{
+    font-size: 0.6rem;
+    color:#777272;
+}
+#dark .notificationTime{
+    color:#4AA9FA;
+}
+.messagesRectLine{
+    width: 95%;
+    height: 1px;
+    margin: 0.01rem auto;
+    background-color: #4AA9FA80;
+    position: relative;
+}
+
+.messagesRectLine:last-child{
+    display: none;
+}
 .add-program{
     width: 100%;
     display: flex;
@@ -91,14 +117,21 @@
     margin: 1rem 0;
   }
   .add-program button{
-    background: #FFFFFF;
-  border: 1px solid #FA8128;
-  border-radius: 20px;
-  cursor: pointer;
-  height: 2rem;
-  width: 10rem;
-  color: #FA8128;
-  font-weight: 700;
+    cursor: pointer;
+    height: 4rem;
+    width: 100%;
+    color: #005AA7D9;
+    font-size: 1rem;
+    font-weight: 700;
+    background: #F1F8FF;
+    opacity: 0.85;
+    border: 3px dashed #4AA9FA;
+    border-radius: 10px;
+  }
+  #dark .add-program button{
+    background: #001527;
+    border: 3px dashed #00559D;
+
   }
 
 @media screen and (max-width: 1200px) {
