--- a/client/src/components/Dashboard/MainDash/MainDash.css
+++ b/client/src/components/Dashboard/MainDash/MainDash.css
@@ -29,7 +29,7 @@
 @media screen and (max-width: 1200px) {
     .MainDash{
         justify-content:flex-start;
-        margin-top: 2rem;
+        padding-top: 2rem;
     }
 }
 
