--- a/client/src/components/Dashboard/RightSide/RightSide.css
+++ b/client/src/components/Dashboard/RightSide/RightSide.css
@@ -137,7 +137,7 @@
 @media screen and (max-width: 1200px) {
     .RightSide{
         justify-content: flex-start;
-        margin-top: 3rem;
+        padding-top: 3rem;
     }
 }
 
