hmp programs added

--- a/client/src/components/ProfileHeader.css
+++ b/client/src/components/ProfileHeader.css
@@ -2,15 +2,19 @@
     padding: 0 16px;
 }
 .HeaderContent{
-    padding-right: 4rem;
+    padding: 0 4rem 0 2rem;
 }
 
 #dark .ProfileHeader{
     color: #ECF5FC;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .ProfileHeader{
-        margin-top: 2rem;
+        margin-top: 3rem;
     }
+    .HeaderContent{
+        padding: 0 3rem 0 1rem;
+    }
+    
 }
