--- a/client/src/components/HMPProgram.css
+++ b/client/src/components/HMPProgram.css
@@ -10,11 +10,16 @@
     height: 8rem;
     border-radius: 10px;
 }
-
+#dark .ProgramContent h3:first-child{
+    color: #95CEFF;
+}
 .ProgramRectLine{
     height: 1px;
     width: auto;
     background-color: black;
+}
+#dark .ProgramRectLine{
+    background-color: #95CEFF
 }
 .ProgramDurationWrapper{
     text-align: center;
@@ -28,6 +33,9 @@
 .ProgramContent h3{
     color: #013765;
 
+}
+#dark .ProgramContent{
+    color: #D9D9D9;
 }
 
 .HMPProgramWrapper button{
