--- a/client/src/pages/Landing.css
+++ b/client/src/pages/Landing.css
@@ -15,7 +15,9 @@
     height: auto;
     left: 0;
 }
-
+.secondBgImage{
+    margin-top: -35rem;
+}
 .content{
     width: 90%;
     margin-top: 2rem;
@@ -140,9 +142,83 @@
     transform: scale(1.1);
     transition: 0.3s;
 }
+
+.servicesContent{
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.servicesContent h1{
+    margin: 0;
+    padding: 0;
+}
+.servicesContent h1 img{
+    margin-bottom: -1rem;
+}
+.servicesContent button{
+    width: 15rem;
+    height: 4rem;
+    background: #013765;
+    border: 3px solid #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
+    color: #F3F3F4;
+    font-weight: 700;
+
+}
+
+.servicesWrapper{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 3rem 0 ;
+}
+.landing-services{
+    margin: 15rem 0;
+}
+.landing-aboutus{
+    width: 100%;
+    background-color: var(--HMPLogoYellow);
+    height: 40rem;
+}
+.landing-pricing{
+    margin: 10rem 0;
+    width: 100%;
+    height: 30rem;
+    background-color: #D9D9D9;
+}
+.testimonialsHeader p,.testimonialsHeader h1{
+    margin: 0;
+    padding: 0;
+}
+.testimonialsHeader {
+    text-align: center;
+}
+.testimonialsHeader p{
+    color: #99989C;
+    margin-top: 0.5rem;
+    font-weight: 700;
+}
+
+.landing-footer{
+    padding: 0 12%;
+    background-color:#D9D9D9;
+    width: auto;
+    height: 20rem;
+}
+.landing-testimonials{
+    margin: 10rem 0;
+}
+
 @media screen and (max-width: 1200px) {
     .landing{
         margin: 0 5%;
+        width: auto;
+    }
+    .landing-footer{
+        padding: 0 5%;
     }
     .bgImage{
         display: none;
@@ -157,6 +233,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        text-align: center;
+    }
+    .servicesContent{
+        width: 100%;
     }
   }
 
@@ -166,7 +246,6 @@
         margin: 0;
         padding: 0 5%;
         width: auto;
-        
     } 
     .content h1{
         font-size: 2rem;
@@ -181,4 +260,5 @@
     .landing-trendingPrograms{
         text-align: center;
     }
+    
 }
