--- a/client/src/pages/Landing.css
+++ b/client/src/pages/Landing.css
@@ -1,6 +1,5 @@
 .landing{
     margin: 0 12%;
-    
 }
 .landing-section1{
     display: grid;
@@ -98,13 +97,17 @@
     margin: 10rem 0;
 }
 
-.landing-trendingPrograms h1{
+.landing-trendingPrograms h1,.landing-pricing h1,.landing-pricing p{
     margin: 0;
     padding: 0;
 }
-.landing-trendingPrograms p{
+.landing-trendingPrograms p,.landing-pricing p{
     color: #99989C;
     font-weight: 700;
+}
+.landing-pricing p{
+    margin-top: 0.3rem;
+    margin-bottom: 2rem;
 }
 .landingProgramWrapper{
     background-color: var(--HMPLogoBlue);
@@ -166,9 +169,12 @@
     border-radius: 30px;
     color: #F3F3F4;
     font-weight: 700;
-
+    cursor: pointer;
 }
-
+.servicesContent button:hover{
+    transform: scale(1.1);
+    transition: 0.3s;
+}
 .servicesWrapper{
     display: flex;
     flex-wrap: wrap;
@@ -178,6 +184,7 @@
 .landing-services{
     margin: 15rem 0;
 }
+
 .landing-aboutus{
     width: 100%;
     background-color: var(--HMPLogoYellow);
@@ -186,9 +193,9 @@
 .landing-pricing{
     margin: 10rem 0;
     width: 100%;
-    height: 30rem;
-    background-color: #D9D9D9;
+    height: auto;
 }
+
 .testimonialsHeader p,.testimonialsHeader h1{
     margin: 0;
     padding: 0;
@@ -210,6 +217,16 @@
 }
 .landing-testimonials{
     margin: 10rem 0;
+}
+.landing-pricing{
+    text-align: center;
+}
+.landingPricingWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    flex-wrap: wrap;
 }
 
 @media screen and (max-width: 1200px) {
