--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -1,16 +1,15 @@
 .login-wrapper{
-	background-color: #FCFAF6;
+	background-color: #FDFDFD;
 	height: 100vh;
+	padding: 0 12%;
 }
 
 .login-form-container{
 	width: 25rem;
-	margin-left: 10%;
 	height: 50%;
 }
 .login-form{
     padding: 1rem;
-    border-radius: 20px;
     background-color: #fff;
 	display: flex;
 	align-items: center;
@@ -19,9 +18,7 @@
 	height: 100%;
 	text-align: center;
     color: black;
-	border-color: #FECB8E40;
-	border-width: 10px;
-	border-style: solid;
+	border: 1px solid #4AA9FA;
 }
 .login-form input{
 	border: none;
@@ -43,14 +40,30 @@ border-radius: 8px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	margin: 0 5rem;
-	padding-top: 1rem;
+	padding-top: 2rem;
 	margin-bottom: 10vh;
 }
 .navbar img{
-	width: 8rem;
-	height: 4rem;
-	
+	width: 9rem;
+	height: 3.8rem;
+	cursor: pointer;
+}
+.login-form p{
+	margin: 0;
+	padding: 0;
+}
+.login-wrapper Link, .login-wrapper a{
+	font-size: 0.8rem;
+	text-decoration: none;
+	color: #626265;
+	font-weight: 700;
+}
+.login-subtitle{
+	font-size: 0.8rem;
+	font-weight: 700;
+	display: flex;
+	gap:0.5rem;
+	margin-bottom: 1rem;
 }
 .navbar-buttons{
 	display: flex;
@@ -70,20 +83,25 @@ border-radius: 8px;
 .signup-button{
 	width: 5rem;
 	height: 2.5rem;
-	border-radius: 8px;
-	border-color: linear-gradient(180deg, #063F6F 0%, #3081C7 100%);
+	border-radius: 50px;
+	border-color: #013765;
 	border-width: 1px;
 	background-color: white;
 	color: #626265;
 	font-weight: 600;
 	font-size: 0.8rem;
+	cursor: pointer;
+}
+.signup-button:hover{
+	transform: scale(1.1);
+	transition: 0.3s;
 }
 
 .content-wrapper{
 	display: flex;
-	width: 100%;
-	justify-content: space-around;
-	
+	width: auto;
+	justify-content: center;
+	align-items: center;
 }
 .login-img-wrapper{
 	width: 40%;
@@ -93,14 +111,19 @@ border-radius: 8px;
 	width: 70%;
 	height: 200%;
 }
-
-@media screen  and (max-width:760px){
-	.content-wrapper{
-		flex-direction: column;
+@media screen and (max-width:1200px) {
+	.login-img-wrapper{
+		display: none;
 	}
+}
+@media screen  and (max-width:760px){
+	.login-wrapper{
+		padding: 0 5%;
+	}
+	
+	
 	.login-form-container{
-		margin: 0 1rem ;
-		width: auto;
+		margin: 0 5%;
 		align-items: center;
 	}
 }
