--- a/client/src/components/Landing/Testimonials/TestimonialCard.css
+++ b/client/src/components/Landing/Testimonials/TestimonialCard.css
@@ -8,15 +8,21 @@
 .testimonialSliderWrapper img{
     width: auto;
     height: 20rem;
+    margin-left: 30%;
 }
+
 .testimonialWrapper{
     display: grid !important;
-    align-items: center;
+  
+    place-items: center;
     grid-template-columns: 50% auto 2rem;
 }
 .testimonialContent{
     width: auto;
-    height: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 .testimonialContent p,.testimonialContent h1, .testimonialContent h4{
     margin: 0;
