--- a/client/src/pages/Landing.css
+++ b/client/src/pages/Landing.css
@@ -47,6 +47,7 @@
 .howItWorks{
     display: flex;
     align-items: center;
+    text-align: left !important;
     gap: 0.5rem
 }
 .playButtonCircle{
