--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,10 @@ body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
+  
+}
+html{
+  scroll-behavior: smooth !important;
 }
 
 code {
