--- a/client/src/pages/ManageMessages.css
+++ b/client/src/pages/ManageMessages.css
@@ -1,8 +1,26 @@
 .sendMessageWrapper{
-    display: flex;
+    display: flex !important;
     gap: 1rem;
     align-items: center;
+    justify-content: center;
 }
 .sendMessageWrapper input{
-    width: 20rem;
+    
+    border: none;
+	padding: 0.8rem;
+    border-radius: 10px;
+	width: 60%;
+	border: 1px solid #1C1C1E7A
+}
+.sendMessageWrapper button{
+    background: linear-gradient(180deg, #013765 0%, #3386CD 100%);
+border-radius: 8px;
+	border: none;
+	padding: 0.8rem;
+    width: auto;
+	color: white;
+	cursor: pointer;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
