--- a/client/src/pages/Landing.css
+++ b/client/src/pages/Landing.css
@@ -188,7 +188,9 @@
 
 .landing-aboutus{
     width: 100%;
-    
+    justify-content:center;
+    align-items:center;
+    text-align:center;
     height: 30rem;
 }
 .landing-pricing{
