--- a/client/src/components/Dashboard/RightSide/RightSide.css
+++ b/client/src/components/Dashboard/RightSide/RightSide.css
@@ -132,6 +132,24 @@
     border: 3px dashed #00559D;
 
   }
+  .appointmentWrapper{
+    display: flex;
+    padding: 1rem;
+    gap:1rem;
+    justify-content: center;
+    align-items: center;
+    background-color: lightcyan;
+    border-radius: 20px;
+  }
+  
+  .appointmentWrapper img{
+    width: 2rem;
+    height: 2rem;
+  }
+  .appointmentWrapper h3, .appointmentWrapper p{
+    padding: 0;
+    margin: 0;
+  }
 
 @media screen and (max-width: 1200px) {
     .RightSide{
