course css done

--- a/client/src/pages/Course.css
+++ b/client/src/pages/Course.css
@@ -3,19 +3,27 @@
     justify-content: space-between;
     color: #005AA7;
 }
-
+#dark .courseProgressWrapper{
+    color: #95CEFF;
+}
 .courseWrapper{
     padding: 0 5%;
 }
 .courseWrapper h1{
     color:#013765;
-
 }   
+#dark .courseWrapper h1{
+    color: #ECF5FC
+}
 .courseInputWrapper{
     display: flex;
-    
+    padding-left: 1rem;
     gap:10rem;
     background-color: #ECF5FC;
+}
+#dark .courseInputWrapper{
+    background-color: #005AA7;
+    color: #ECF5FC;
 }
 .selectWrapper{
     display: flex;
@@ -30,4 +38,41 @@
     text-align: center;
     background-color: #FFEDCB;
     border: none;
+}
+#dark .selectWrapper select{
+    background-color: #ECF5FC;
+}
+.linksWrapper{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-top: 1rem;
+    gap:3rem;
+}
+.videoWrapper img{
+    width: 20rem;
+    height: 15rem;
+    border-radius: 10px;
+    margin-bottom: 0.5rem;
+}
+.videoWrapper a{
+    text-decoration: none;
+    color: #013765;
+    display: flex;
+    flex-direction: column;
+    font-size: x-large;
+}
+#dark .videoWrapper a{
+    color: #95CEFF;
+}
+@media screen and (max-width: 765px) {
+    .courseWrapper{
+        padding: 0 3%;
+    }
+    .courseProgressWrapper{
+        display: block;
+    }
+    .courseInputWrapper{
+        gap:3rem;
+    }
 }
