--- a/client/src/pages/Landing.css
+++ b/client/src/pages/Landing.css
@@ -15,7 +15,7 @@
     left: 0;
 }
 .secondBgImage{
-    margin-top: -35rem;
+    margin-top: -57vw;
 }
 .content{
     width: 90%;
@@ -102,7 +102,11 @@
     margin: 0;
     padding: 0;
 }
-.landing-trendingPrograms p,.landing-pricing p{
+.aboutUsSlider{
+    margin-top:5rem;
+    margin-bottom:20rem;
+}
+.landing-trendingPrograms p,.landing-pricing p,.landing-aboutus p{
     color: #99989C;
     font-weight: 700;
 }
@@ -191,8 +195,10 @@
     justify-content:center;
     align-items:center;
     text-align:center;
-    height: 15rem;
+    height: auto;
+    margin-top: 15rem;
 }
+
 .landing-pricing{
     margin: 10rem 0;
     width: 100%;
