appointment css fixed

--- a/client/src/pages/Appointments.css
+++ b/client/src/pages/Appointments.css
@@ -10,10 +10,25 @@
     justify-content: center;
     align-items: center;
 }
+.inputWrapper select,.inputWrapper input{
+    width: 10rem;
+    height: 2rem;
+    border-radius: 8px;
+    text-align: center;
+    background-color: #FFEDCB;
+    border: none;
+}
 .appointmentButtons{
     display: flex;
     gap: 5rem;
 }
 #dark .inputWrapper{
     color: #ECF5FC;
+}
+.appointmentButtons button{
+
+    color: var(--HMPBlue);
+    border-radius: 10px;
+    width: 10rem;
+    height: 3rem;
 }
