--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -5,7 +5,7 @@
   position: relative;
   padding-top: 4rem;
   transition: all 300ms ease;
-  height: max(auto,100vh);
+  height: 100vh;
   padding-bottom: 10rem;  
 } 
 
