--- a/client/src/pages/Landing.css
+++ b/client/src/pages/Landing.css
@@ -301,7 +301,7 @@ textarea {
   border:0;
   cursor:pointer;
   color:white;
-  font-size:24px;
+  font-size:1.3rem;
   padding-top:10px;
   padding-bottom:10px;
   transition: all 0.3s;
