--- a/client/src/pages/Appointments.css
+++ b/client/src/pages/Appointments.css
@@ -1,34 +1,45 @@
-.inputWrapper{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap:5rem;
+.inputWrapper {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 5rem;
 }
-.bookAppointmentWrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.inputWrapper h4 {
+  width: 10.5rem;
 }
-.inputWrapper select,.inputWrapper input{
-    width: 10rem;
-    height: 2rem;
-    border-radius: 8px;
-    text-align: center;
-    background-color: #FFEDCB;
-    border: none;
+.bookAppointmentWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.appointmentButtons{
-    display: flex;
-    gap: 5rem;
+.inputWrapper select,
+.inputWrapper input {
+  width: 10rem;
+  height: 2rem;
+  border-radius: 8px;
+  text-align: center;
+  background-color: #ffedcb;
+  border: none;
 }
-#dark .inputWrapper{
-    color: #ECF5FC;
+.appointmentButtons {
+  display: flex;
+  gap: 5rem;
 }
-.appointmentButtons button{
-
-    color: var(--HMPBlue);
-    border-radius: 10px;
-    width: 10rem;
-    height: 3rem;
+#dark .inputWrapper {
+  color: #ecf5fc;
+}
+.appointmentButtons button {
+  color: var(--HMPBlue);
+  border-radius: 10px;
+  width: 10rem;
+  height: 3rem;
+}
+@media screen and (max-width: 768px) {
+  .inputWrapper {
+    gap: 2rem;
+  }
+  .appointmentButtons {
+    gap: 2rem;
+  }
 }
