--- a/client/src/components/Dashboard/Cards/Cards.css
+++ b/client/src/components/Dashboard/Cards/Cards.css
@@ -3,43 +3,41 @@
   gap: 10px;
   width: 95%;
 }
-.parentContainer{
+.parentContainer {
   width: 100%;
 }
-.card-button{
+.card-button {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 2rem;
 }
-.card-button button{
-background: #FFFFFF;
-border: 1px solid var(--HMPBlue);
-border-radius: 20px;
-cursor: pointer;
-height: 2rem;
-width: 8rem;
-color: var(--HMPBlue);
-font-weight: 700;
+.card-button button {
+  background: #ffffff;
+  border: 1px solid var(--HMPBlue);
+  border-radius: 20px;
+  cursor: pointer;
+  height: 2rem;
+  width: 8rem;
+  color: var(--HMPBlue);
+  font-weight: 700;
 }
 
-
-#dark .card-button button{
+#dark .card-button button {
   background: var(--DarkBG);
   filter: drop-shadow(0px 2px 4px #013765);
-  color:#4AA9FA;
+  color: #4aa9fa;
 }
 
 @media screen and (max-width: 1200px) {
-  .Cards{
+  .Cards {
     flex-direction: column;
   }
 }
 
-@media screen and (max-width: 768px)
-{
-  .Cards{
+@media screen and (max-width: 768px) {
+  .Cards {
     width: 80%;
   }
 }
